# scribe-extractor

./: .gitignore  pyproject.toml  readme.md
src/: extract_text.py
